--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">E-Recycling</string>
     <string name="title_login">Login</string>
     <string name="title_admin">Admin</string>
+    <string name="register_link"><u>Register here</u></string>
 </resources>
